20181216c - most of the logic is there

--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
         <script src="assets/javascript/game.js"></script>
     </head>
     <body>
-        <h1>Hangperson</h1>
+        <h1>Transformers</h1>
+        <h2>Hangbot</h2>
+
+        Press any key to get started!
+
+        <h3>Stats</h3>
+        <p>Guesses Remaining: <span id="remaining"></span></p>
+        <p>Wins: <span id="wins"></span></p>
+        <p>Losses: <span id="losses"></span></p>
+
+        <h3>Current Word</h3>
+        <h4 id="answer" style="letter-spacing: 10px;">
+
+        </h4>
+
+        <h3>Letters Guessed</h3>
+        <h4 id="badguess"></h4>
+        
+        <h3>Last Game:</h3>
+        <p>Name: <span id="botName"></span></p>
+        <p>Faction: <span id="botFaction"></span></p>
+        <p>Image: <span id="botImage"></span></p>
+        <p>Quote: <span id="botQuote"></span></p>
+        
+
     </body>
 </html>
