--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
         
         <div style="width: 55%; float:left; border: 1px solid #000000; padding: 20px;">
-        <h3>Last Game:</h3>
+        <h3>Last Win:</h3>
         <p>Name: <span id="botName"></span></p>
-        <!-- <p>Faction: <span id="botFaction"></span></p>
+        <!-- <p>Faction: <span id="botFaction"></span></p> -->
+        <p>Quote: <span id="botQuote"></span></p>
         <p>Image: <span id="botImage"></span></p>
-        <p>Quote: <span id="botQuote"></span></p> -->
         </div>
         
         </div>
